--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,9 @@ html {
 GENERAL
 */
 
+header .list {
+    display: none;
+}
 ul {
     list-style: none;
     display: flex;
@@ -36,17 +39,18 @@ ul {
     background: none;
     border: none;
     color: white;
+    padding: 5px;
+ }
+
+ header .white {
+    border-radius: 20px;
+    color: black ; 
+    background-color: var(--white);
  }
 
 img {
     max-width: 100%;
 }
-
-header .list {
-    
-
-}
-
 
 /*
 HEADER
@@ -66,6 +70,7 @@ body .row {
     justify-content: space-between;
     margin: 0 auto;
     width: 80%;
+    align-items: center;
 }
 
 /*
